# MyDesignPatterns

./: README.md
AbstractFactory/: Factory.hpp  FactoryX.hpp  FactoryY.hpp  Product.hpp  ProductA.hpp  ProductB.hpp  ProductC.hpp  main.cpp
PoolAllocator/: AllocatorFactory.hpp  main.cpp
PoolAllocator/Allocators/: AllocatorFactory.hpp  CMakeLists.txt  Compute.cpp  Makefile  main.cpp
PoolAllocator/Allocators/cmake/: select_backend.cmake
PoolAllocator/Allocators/include/: AllocDeviceCuda.hpp  AllocHostMalloc.hpp  AllocHostPinned.hpp  AllocatorFactory.hpp  (+2 more)
PoolAllocator/Allocators/source/: AllocDeviceCuda.cpp  AllocHostMalloc.cpp  AllocHostPinned.cpp  CMakeLists.txt  Compute.cpp  RuntimeManager.cpp
PoolAllocator/MemoryPool/: main.cu
PoolAllocator/MemoryPoolII/: AlignedMemoryPool.cpp  AlignedMemoryPool.hpp  CMakeLists.txt  ContiguousMemoryPool.cpp  ContiguousMemoryPool.hpp  Makefile  MemoryPool.cpp  MemoryPool.hpp  MemoryPoolContiguous.hpp  main.cpp  main.cu
PoolAllocator/MemoryPoolII/impl2/: main.cpp
PoolAllocator/MemoryPoolII/include/: CudaMemoryPool.hpp  Dispatching.hpp  SaxpyKernel.hpp
PoolAllocator/MemoryPoolII/source/: AlignedMemoryPool.cpp  CMakeLists.txt  CudaMemoryPool.cpp  MemoryPool.cpp
PoolAllocator/RuntimePolymorphism/: main.cpp
PoolAllocator/RuntimePolymorphismII/: AllocatorFactory.hpp  Compute.cpp  Compute.hpp  RuntimeManager.hpp  main.cpp
concurrency/: data.txt  overlap_read_compute.cpp
kdtree/: 2dRectGrid.cpp  Makefile  generate.hpp  kdtree.hpp  knn_search.hpp  main.cpp  runValgrindCheck.sh  valgrind-leak-profiling-1M-points.txt
(+22 files in other folders)
